# galactus

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  galactus.yaml  init_db.sql  pyproject.toml  requirements.txt
airflow/: Dockerfile
airflow/dags/: a_bronze_dag.py  abc_color_pipeline.py  arete_pipeline.py  b_silver_dag.py  biggie_pipeline.py  c_gold_dag.py  casarica_pipeline.py  elnacional_pipeline.py  grutter_pipeline.py  hoy_pipeline.py  lanacion_pipeline.py  latribuna_pipeline.py  losjardines_pipeline.py  megacadena_pipeline.py  noticias_daily.py  npy_pipeline.py  realonline_pipeline.py  stock_pipeline.py  supermercados_daily.py  supermercados_orchestrator.py  superseis_pipeline.py  ultimahora_pipeline.py
configs/: abc_color.yaml  arete.yaml  biggie.yaml  casarica.yaml  elnacional.yaml  grutter.yaml  hoy.yaml  lanacion.yaml  latribuna.yaml  losjardines.yaml  megacadena.yaml  noticias.yaml  npy.yaml  realonline.yaml  stock.yaml  supermercados.yaml  superseis.yaml  ultimahora.yaml
configs/noticias/: abc_color.yaml  ultimahora.yaml
configs/supermercados/: biggie.yaml  stock.yaml
galactus/: __main__.py  cli.py  config.py  pipeline.py
galactus/core/: deps.py  domain_registry.py  errors.py  interfaces.py  pipeline.py  records.py  registry.py  types.py
galactus/extract/: base.py  base_scraper.py  html_parser.py  html_processor.py  registry.py  stage.py
galactus/infra/: blob_store.py  clock.py  db.py  http.py  logging.py  (+2 more)
llm/: start_mlx_server.sh
migrations/: env.py
noticias/: __init__.py  article.py  config.py  docker-compose.yml  init_db.sql  main.py  parsers.py  storage.py
sql/: 00-airflow-db.sql  00-schemas.sql  01-bronze-snapshots.sql  02-bronze-api-responses.sql  03-silver-products.sql  04-silver-articles.sql  05-silver-article-tags.sql  06-silver-article-entities.sql  07-silver-article-images.sql  08-airflow-db.sql  __init__.py  base.py
supermercados/: __init__.py  config.py  db.py  docker-compose.yml  init_db.sql  main.py  parsers.py  product.py  settings.py  storage.py
(+272 files in other folders)
