[project]
name = "galactus"
version = "0.1.0"
description = "Reusable async web scraper framework with BFS crawling and API pagination"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pyyaml",
    "psycopg[binary,pool]",
    "pydantic",
    "pydantic-settings",
    "alembic>=1.18.4",
    "python-dateutil",
    "aioboto3",
]

[project.optional-dependencies]
dev = ["ruff"]
mlx = ["mlx-lm"]

[project.scripts]
galactus = "galactus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galactus", "noticias", "supermercados"]
