[project]
name = "galactus"
version = "0.2.0"
description = "Three-stage scraping pipeline: bronze (extract) -> silver (transform) -> gold (load)"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pyyaml",
    "psycopg[binary,pool]",
    "pydantic",
    "alembic>=1.18.4",
    "python-dateutil",
    "aioboto3",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
galactus = "galactus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["galactus"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
